--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"/>
     </div>
     <nav>
-      <span><a href="mission">Mission</a></span>
-      <span><a href="featured">Featured Tea</a></span>
-      <span><a href="location">Locations</a></span>
+      <span><a href="#mission">Mission</a></span>
+      <span><a href="#featured">Featured Tea</a></span>
+      <span><a href="#location">Locations</a></span>
     </nav>
   </header>
 
